--- a/.github/workflows/count_secret_references.yml
+++ b/.github/workflows/count_secret_references.yml
@@ -2,6 +2,9 @@ name: Count Secret References
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - develop
 
 jobs:
   count-secrets:
