--- a/.github/workflows/count_secret_references.yml
+++ b/.github/workflows/count_secret_references.yml
@@ -14,8 +14,15 @@ jobs:
       - name: Count secret references
         id: count_secrets
         run: |
-          count=$(grep -r -o '\${{ secrets.LIQUIBASE_COMMAND_PASSWORD }}' . | wc -l)
+          # Buscar la cadena exacta en el repositorio
+          count=$(grep -r -o 'secrets.LIQUIBASE_COMMAND_PASSWORD' . | wc -l)
           echo "secret_count=$count" >> $GITHUB_ENV
 
       - name: Output secret count
-        run: echo "The secret \${{ secrets.LIQUIBASE_COMMAND_PASSWORD }} appears ${{ env.secret_count }} times in the repository."
+        run: echo "The string 'secrets.LIQUIBASE_COMMAND_PASSWORD' appears ${{ env.secret_count }} times in the repository."
+
+      - name: Fail if more than one reference
+        if: ${{ env.secret_count }} -gt 1
+        run: |
+          echo "Error: The string 'secrets.LIQUIBASE_COMMAND_PASSWORD' is referenced more than once."
+          exit 1
