--- a/.github/workflows/count_secret_references.yml
+++ b/.github/workflows/count_secret_references.yml
@@ -8,21 +8,35 @@ jobs:
   count-secrets:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout base branch
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.base.ref }}
 
-      - name: Count secret references
-        id: count_secrets
+      - name: Count secret references in base branch
+        id: count_base
         run: |
-          # Buscar la cadena exacta en el repositorio
-          count=$(grep -r -o 'secrets.LIQUIBASE_COMMAND_PASSWORD' . | wc -l)
-          echo "secret_count=$count" >> $GITHUB_ENV
+          base_count=$(grep -r -o 'secrets.LIQUIBASE_COMMAND_PASSWORD' . | wc -l)
+          echo "base_secret_count=$base_count" >> $GITHUB_ENV
 
-      - name: Output secret count
-        run: echo "The string 'secrets.LIQUIBASE_COMMAND_PASSWORD' appears ${{ env.secret_count }} times in the repository."
+      - name: Checkout feature branch
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
 
-      - name: Fail if more than one reference
-        if: ${{ env.secret_count }} -gt 1
+      - name: Count secret references in feature branch
+        id: count_feature
         run: |
-          echo "Error: The string 'secrets.LIQUIBASE_COMMAND_PASSWORD' is referenced more than once."
+          feature_count=$(grep -r -o 'secrets.LIQUIBASE_COMMAND_PASSWORD' . | wc -l)
+          echo "feature_secret_count=$feature_count" >> $GITHUB_ENV
+
+      - name: Output secret counts
+        run: |
+          echo "Base branch secret count: ${{ env.base_secret_count }}"
+          echo "Feature branch secret count: ${{ env.feature_secret_count }}"
+
+      - name: Fail if more than one reference in either branch
+        if: ${{ env.base_secret_count }} -gt 1 || ${{ env.feature_secret_count }} -gt 1
+        run: |
+          echo "Error: The string 'secrets.LIQUIBASE_COMMAND_PASSWORD' is referenced more than once in one of the branches."
           exit 1
