--- a/.github/workflows/count_secret_references.yml
+++ b/.github/workflows/count_secret_references.yml
@@ -1,8 +1,8 @@
-name: Count Secret References
+name: Count Secret References in Merge
 
 on:
-  workflow_dispatch:
   pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
   count-secrets:
@@ -12,31 +12,30 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.base.ref }}
-
-      - name: Count secret references in base branch
-        id: count_base
+          
+      - name: Create temporary branch for merge
         run: |
-          base_count=$(grep -r -o 'secrets.LIQUIBASE_COMMAND_PASSWORD' . | wc -l)
-          echo "base_secret_count=$base_count" >> $GITHUB_ENV
+          git checkout -b temp-merge-branch
+          git fetch origin ${{ github.head_ref }}
+          git merge --no-commit --no-ff origin/${{ github.head_ref }}
 
-      - name: Checkout feature branch
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}
-
-      - name: Count secret references in feature branch
-        id: count_feature
+      - name: Count secret references in the merged result
+        id: count_secrets
         run: |
-          feature_count=$(grep -r -o 'secrets.LIQUIBASE_COMMAND_PASSWORD' . | wc -l)
-          echo "feature_secret_count=$feature_count" >> $GITHUB_ENV
+          # Contar las referencias en el resultado del merge
+          count=$(grep -r -o 'secrets.LIQUIBASE_COMMAND_PASSWORD' . | wc -l)
+          echo "secret_count=$count" >> $GITHUB_ENV
 
-      - name: Output secret counts
-        run: |
-          echo "Base branch secret count: ${{ env.base_secret_count }}"
-          echo "Feature branch secret count: ${{ env.feature_secret_count }}"
+      - name: Output secret count
+        run: echo "The string 'secrets.LIQUIBASE_COMMAND_PASSWORD' appears ${{ env.secret_count }} times in the merged result."
 
-      - name: Fail if more than one reference in either branch
-        if: ${{ env.base_secret_count }} -gt 1 || ${{ env.feature_secret_count }} -gt 1
+      - name: Fail if more than one reference in the merged result
+        if: ${{ env.secret_count }} -gt 1
         run: |
-          echo "Error: The string 'secrets.LIQUIBASE_COMMAND_PASSWORD' is referenced more than once in one of the branches."
+          echo "Error: The string 'secrets.LIQUIBASE_COMMAND_PASSWORD' is referenced more than once in the merged result."
           exit 1
+
+      - name: Clean up
+        run: |
+          git checkout ${{ github.event.pull_request.base.ref }}
+          git branch -D temp-merge-branch
