--- a/.github/workflows/count_secret_references.yml
+++ b/.github/workflows/count_secret_references.yml
@@ -13,6 +13,11 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.base.ref }}
           
+      - name: Set up Git identity
+        run: |
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Actions"
+
       - name: Create temporary branch for merge
         run: |
           git checkout -b temp-merge-branch
