--- a/.github/workflows/count_secret_references.yml
+++ b/.github/workflows/count_secret_references.yml
@@ -32,11 +32,7 @@ jobs:
           echo "secret_count=$count" >> $GITHUB_ENV
 
       - name: Output secret count
-        run: |
-          echo "The string 'secrets.LIQUIBASE_COMMAND_PASSWORD' appears ${{ env.secret_count }} times in the merged result."
-
-      - name: Debug secret count
-        run: echo "Debug: The secret_count variable is ${{ env.secret_count }}"
+        run: echo "The string 'secrets.LIQUIBASE_COMMAND_PASSWORD' appears ${{ env.secret_count }} times in the merged result."
 
       - name: Fail if more than one reference in the merged result
         if: ${{ env.secret_count }} -gt 1
