--- a/.github/workflows/count_secret_references.yml
+++ b/.github/workflows/count_secret_references.yml
@@ -1,8 +1,8 @@
 name: Count Secret References in Merge
 
 on:
+  workflow_dispatch:
   pull_request:
-    types: [opened, synchronize, reopened]
 
 jobs:
   count-secrets:
@@ -34,9 +34,6 @@ jobs:
       - name: Output secret count
         run: |
           echo "The string 'secrets.LIQUIBASE_COMMAND_PASSWORD' appears ${{ env.secret_count }} times in the merged result."
-
-      - name: Debug secret count
-        run: echo "Debug: The secret_count variable is ${{ env.secret_count }}"
 
       - name: Fail if more than one reference in the merged result
         if: ${{ env.secret_count }} -gt 1
