--- a/.github/workflows/count_secret_references.yml
+++ b/.github/workflows/count_secret_references.yml
@@ -36,7 +36,7 @@ jobs:
           echo "The string 'secrets.LIQUIBASE_COMMAND_PASSWORD' appears ${{ env.secret_count }} times in the merged result."
 
       - name: Fail if more than one reference in the merged result
-        if: ${{ env.secret_count }} -gt 2
+        if: ${{ env.secret_count > 1 }}
         run: |
           echo "Error: The string 'secrets.LIQUIBASE_COMMAND_PASSWORD' is referenced more than once in the merged result."
           exit 1
